--- a/server/report/59c0beae1f4b3f28879e3433.html
+++ b/server/report/59c0beae1f4b3f28879e3433.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head><meta charset="UTF-8">
-<meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
+<meta name="viewport" content="width=device-widtd, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>API文档</title>
 <link rel="stylesheet" href="59c0beae1f4b3f28879e3433.css"></head>
