--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>bset-api</title>
+    <title>best-api</title>
   </head>
   <body>
     <div id="app"></div>
